k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube-downloader
  template:
    metadata:
      labels:
        app: youtube-downloader
    spec:
      containers:
      - name: server
        image: gabbersepp/youtube-download-server
        volumeMounts:
          - mountPath: /data
            name: data
            subPath: "Shared Music/Youtube"
        ports:
        - containerPort: 8081
      - name: client
        image: gabbersepp/youtube-download-client
        ports:
        - containerPort: 80
      volumes:
        - name: data
          nfs:
            server: 192.168.2.125
            path: /nfs/Public
            readOnly: false

---

apiVersion: v1
kind: Service
metadata:
  name: youtube-downloader
spec:
  type: ClusterIP
  selector:
    app: youtube-downloader
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: api
    port: 8081
    targetPort: 8081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-downloader
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.2.0/24
spec:
  rules:
  - host: yt.h5b.de
    http:
      paths:
      - path: /api(/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: youtube-downloader
            port: 
              name: api
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: youtube-downloader
            port: 
              name: web
